alpha shape setup, dependency walker tool

--- a/src/plugins.cfg
+++ b/src/plugins.cfg
@@ -1,7 +1,7 @@
 # Defines plugins to load
 
 # Define plugin folder
-PluginFolder=C:/PythonOgre/plugins
+PluginFolder=C:/PythonOgre1.7.1/plugins
 # Define D3D rendering implementation plugin
 Plugin=RenderSystem_GL.dll
 Plugin=RenderSystem_Direct3D9.dll
