Integrated Ogre/Bullet into simplified simulation loop

--- a/src/plugins.cfg
+++ b/src/plugins.cfg
@@ -1,12 +1,17 @@
 # Defines plugins to load
 
 # Define plugin folder
-PluginFolder=C:/PythonOgre1.7.1/plugins
-# Define D3D rendering implementation plugin
-Plugin=RenderSystem_GL.dll
-Plugin=RenderSystem_Direct3D9.dll
-Plugin=Plugin_ParticleFX.dll
-Plugin=Plugin_BSPSceneManager.dll
-Plugin=Plugin_OctreeSceneManager.dll
-Plugin=Plugin_CgProgramManager.dll
+PluginFolder=/usr/local/lib/OGRE
 
+# Define plugins
+# Plugin=RenderSystem_Direct3D9
+# Plugin=RenderSystem_Direct3D10
+# Plugin=RenderSystem_Direct3D11
+ Plugin=RenderSystem_GL
+# Plugin=RenderSystem_GLES
+ Plugin=Plugin_ParticleFX
+ Plugin=Plugin_BSPSceneManager
+ Plugin=Plugin_CgProgramManager
+ Plugin=Plugin_PCZSceneManager
+ Plugin=Plugin_OctreeZone
+ Plugin=Plugin_OctreeSceneManager
