--- a/src/resources.cfg
+++ b/src/resources.cfg
@@ -1,15 +1,11 @@
-[Bootstrap]
-Zip=./media/OgreCore.zip
+# Resources required by the sample browser and most samples.
+[Essential]
+Zip=media/packs/SdkTrays.zip
+Zip=media/packs/OgreCore.zip
+
 # Resource locations to be added to the default path
 [General]
-FileSystem=./media
-
-#FileSystem=C:/PythonOgre/demos/media/materials/programs
-#FileSystem=C:/PythonOgre/demos/media/materials/scripts
-#FileSystem=C:/PythonOgre/demos/media/materials/textures
-
-## OgreOde extras
-#FileSystem=C:/PythonOgre/demos/ogreode/media
-#FileSystem=C:/PythonOgre/demos/ogreode/media/models
-#FileSystem=C:/PythonOgre/demos/ogreode/media/materials/scripts
-#FileSystem=C:/PythonOgre/demos/ogreode/media/materials/textures
+FileSystem=media
+FileSystem=media/materials/scripts
+FileSystem=media/materials/textures
+FileSystem=media/models
