--- a/ciba/scripts/centos6-ks.cfg
+++ b/ciba/scripts/centos6-ks.cfg
@@ -1,8 +1,8 @@
 text
 skipx
 install
-url --url http://www.chapterhouse.aero.org/mirrors/sites/centos/6.5/os/x86_64/
-repo --name=updates --baseurl=http://www.chapterhouse.aero.org/mirrors/sites/centos/6.5/os/x86_64/
+url --url http://127.0.0.1/centos/6.5/os/x86_64/
+repo --name=updates --baseurl=http://127.0.0.1/centos/6.5/os/x86_64/
 lang en_US.UTF-8
 keyboard us
 rootpw Password2014
