Build system for setting VM.  Processing only, no simulation

--- a/ciba/scripts/centos6-ks.cfg
+++ b/ciba/scripts/centos6-ks.cfg
@@ -1,8 +1,8 @@
 text
 skipx
 install
-url --url http://127.0.0.1/centos/6.5/os/x86_64/
-repo --name=updates --baseurl=http://127.0.0.1/centos/6.5/os/x86_64/
+url --url http://www.chapterhouse.aero.org/mirrors/sites/centos/6.5/os/x86_64/
+repo --name=updates --baseurl=http://www.chapterhouse.aero.org/mirrors/sites/centos/6.5/os/x86_64/
 lang en_US.UTF-8
 keyboard us
 rootpw Password2014
@@ -17,28 +17,32 @@ services --enabled=network,sshd
 reboot
 
 %packages --nobase
-@ X Window System
+git
 wget
 yum
 openssh-server
 openssh-clients
 gcc
 gcc-c++
-cmake
 gcc-gfortran
 autoconf
 automake
 sysstat
 numpy
-python-matplotlib
 pygtk2
 python-imaging
 python-simplejson
 evince
-firefox
 boost-devel
-xorg-x11-xauth
-PackageKit-gtk-module
+python-devel
+lapack-devel
+freetype-devel
+libpng-devel
+unzip
+gmp-devel
+mpfr-devel
+vim-X11
+@X Window System
 %end
 
 %pre
