--- a/src/ogre.cfg
+++ b/src/ogre.cfg
@@ -1,21 +1,11 @@
-Render System=Direct3D9 Rendering Subsystem
+Render System=OpenGL Rendering Subsystem
 
 [OpenGL Rendering Subsystem]
-Colour Depth=32
-Display Frequency=60
+Display Frequency=60 Hz
 FSAA=0
+Fixed Pipeline Enabled=Yes
 Full Screen=Yes
 RTT Preferred Mode=FBO
 VSync=No
-Video Mode=1024 x 768
-sRGB Gamma Conversion=No
-
-[Direct3D9 Rendering Subsystem]
-Allow NVPerfHUD=No
-Anti aliasing=None
-Floating-point mode=Fastest
-Full Screen=No
-Rendering Device=NVIDIA GeForce 6600 GT
-VSync=No
-Video Mode=640 x 480 @ 16-bit colour
+Video Mode=1600 x  900
 sRGB Gamma Conversion=No
